More spacing fixes

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -62,7 +62,7 @@
     color: rgb(var(--zn-text));
     background-color: rgba(var(--zn-panel), var(--zn-panel-opacity));
     font-size: 15px;
-    padding: 0 var(--zn-spacing-medium);
+    padding: var(--zn-spacing-small);
 
     img {
       height: auto;
@@ -70,8 +70,8 @@
   }
 
   .ql-editor.ql-blank:before {
-    right: var(--zn-spacing-medium);
-    left: var(--zn-spacing-medium);
+    right: var(--zn-spacing-small);
+    left: var(--zn-spacing-small);
     color: rgb(var(--zn-text));
   }
 
