--- a/src/components/form-group/form-group.scss
+++ b/src/components/form-group/form-group.scss
@@ -17,6 +17,11 @@
 
 .form-control__label {
   padding: 0;
+  margin-bottom: 0 !important;
+}
+
+.form-control__label + .form-control__help-text {
+  margin-top: var(--zn-spacing-small) !important;
 }
 
 .form-control--has-label .form-control__label {
